--- a/Robotica_2014_Pacman_PC/.classpath
+++ b/Robotica_2014_Pacman_PC/.classpath
@@ -3,6 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.lejos.nxt.ldt.LEJOS_LIBRARY_CONTAINER/pc"/>
-	<classpathentry kind="lib" path="lib/webcam-capture-0.3.10-RC4.jar"/>
+	<classpathentry kind="lib" path="libs/bridj-0.7-20130703.103049-42.jar"/>
+	<classpathentry kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/webcam-capture-0.3.10-RC4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
