--- a/Robotica_2014_Pacman_PC/.classpath
+++ b/Robotica_2014_Pacman_PC/.classpath
@@ -6,5 +6,10 @@
 	<classpathentry kind="lib" path="libs/bridj-0.7-20130703.103049-42.jar"/>
 	<classpathentry kind="lib" path="libs/slf4j-api-1.7.2.jar"/>
 	<classpathentry kind="lib" path="libs/webcam-capture-0.3.10-RC4.jar"/>
+	<classpathentry kind="lib" path="libs/opencv-249.jar">
+		<attributes>
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Robotica_2014_Pacman_PC/libs/opencv-249x86"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
